master teachers registrados

--- a/moodle/templates/campus/registrar.html
+++ b/moodle/templates/campus/registrar.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>Registrar Persona</title>
+		<title>Registrar Master Teacher</title>
 	</head>
 	<body>
-		<h2>Registrar Persona</h2>
+		<h2>Registrar Master teacher</h2>
 		<form method='POST'>
 			{% csrf_token %}
 			{{form.as_p}}
