campos no obligatorios ya se pueden dejar vacíos

--- a/moodle/templates/campus/listados-personas.html
+++ b/moodle/templates/campus/listados-personas.html
@@ -7,7 +7,7 @@
 		<h2>Listados Personas</h2>
 		<ul>
 			{% for persona in masterteachers %}
-			<li>Nombre: {{persona.experiencia}}</li>
+			<li>Nombre: {{persona.nombre}}</li>
 			{% endfor %}
 		</ul>
 	</body>
