--- a/moodle/templates/campus/index.html
+++ b/moodle/templates/campus/index.html
@@ -1,8 +1,12 @@
-<html>
-	<head>
-		<title>Inicio Campus</title>
-	</head>
-	<body>
-		P&aacutegina de inicio del campus virtual proyecto DS2
-	</body>
-</html>
+{% extends "campus/base.html" %}
+
+{% block title %}
+Campus Virtual | Inicio
+{% endblock %}
+
+{% block content %}
+<h2>Bienvenido al campus virtual del CIER-SUR</h2>
+<div class="acceso-sistema">
+	<!-- Acceder aquí -->
+</div>
+{% endblock %}
