--- a/moodle/templates/campus/listados-personas.html
+++ b/moodle/templates/campus/listados-personas.html
@@ -1,14 +1,16 @@
-<!doctype html>
-<html>
-	<head>
-		<title>Listados Personas</title>
-	</head>
-	<body>
-		<h2>Listados Personas</h2>
-		<ul>
-			{% for persona in masterteachers %}
-			<li>Nombre: {{persona.nombre}}</li>
-			{% endfor %}
-		</ul>
-	</body>
-</html>
+{% extends "campus/base.html" %}
+
+{% block title %}
+Master Teacher | Listado
+{% endblock %}
+
+{% block content %}
+<h2>Listado Master Teacher</h2>
+<div class="listado-masterteacher">
+	<ul>
+		{% for persona in masterteachers %}
+		<li>Nombre: {{persona.nombre}}</li>
+		{% endfor %}
+	</ul>
+</div>
+{% endblock %}
