adicion de secretaria de educacion

--- a/moodle/templates/campus/secretaria-educacion.html
+++ b/moodle/templates/campus/secretaria-educacion.html
@@ -1,13 +1,17 @@
-<html>
-	<head>
-		<title>Registrar Secretaria de Educacion</title>
-	</head>
-	<body>
-		<h2>Registrar Secretaria de Educacion</h2>
-		<form method='POST'>
-			{% csrf_token %}
-			{{form.as_p}}
-			<input type='submit' value='Registrar'>
-		</form>
-	</body>
-</html>
+{% extends "campus/base.html" %}
+
+{% block title %}
+Secretaria de Educacion | Registro
+{% endblock %}
+
+{% block content %}
+<h2>Registrar Secretaria de Educacion</h2>
+<div class="secretaria-educacion">
+
+    <form method='POST'>
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type='submit' value='Registrar'>
+    </form>
+</div>
+{% endblock %}
